--- a/css/styles.css
+++ b/css/styles.css
@@ -16,5 +16,18 @@ body{
     height: 3px;
     background:#7d97ad;
 }
-
+img{
+	max-width: 100%;
+}
+@media only screen and (max-width :425px){
+   h1{ 
+   	font-size :19px;
+   }
+   h2{
+   	font-size:18px;
+   }
+   h4{
+   	font-size:16px;
+   }
+}
 
